<resources>
    <string name="app_name">SpaceX</string>
    <!-- Strings used for fragments for navigation -->

    <string name="global_unknown_error">Unknown Error </string>
    <string name="global_no_network_connection">No internet connect</string>

    <string name="home_company"><![CDATA[<b>%1$s</b> was founded by <b>%2$s</b> in <b>%3$d</b>. It has now <b>%4$d</b> employees, <b>%5$d</b> launch sites, and is valued at USD <b>%6$s</b>]]></string>
    <string name="general_embedded_error">Oops! It\'s an error ⚠️ Data cannot be loaded</string>
    <string name="home_launch_item_patch_description">Patch</string>
    <string name="home_launch_item_mission">Mission:</string>
    <string name="home_launch_item_date_time">Date/time:</string>
    <string name="home_launch_item_rocket">Rocket:</string>
    <string name="home_launch_item_days_from">Days from now:</string>
    <string name="home_launch_item_days_since">Days since now:</string>
    <string name="home_company_title">COMPANY</string>
    <string name="home_launches_title">LAUNCHES </string>
    <string name="home_launch_item_today">Today</string>
    <string name="home_launch_item_since">+%1$d days</string>
    <string name="home_launch_item_from">%1$d days</string>
    <string name="action_filter">Filter</string>
    <string name="filter_title">Filters</string>
    <string name="media_title">Media</string>
    <string name="filter_year_bar">Launch year: </string>
    <string name="filter_year_bar_label">%1$.0f to %2$.0f</string>
    <string name="filter_year_bar_label_to">" to "</string>
    <string name="only_success_launch">Successful launch\n<small>(not the landing of the core)</small></string>
    <string name="filter_sort_by">Sort:</string>
    <string name="filter_sort_launch_year_asd">by newest launches</string>
    <string name="filter_sort_launch_year_desc">by oldest launches</string>
    <string name="media_youtube">Youtube</string>
    <string name="media_Wiki">Wikipedia</string>
    <string name="media_article">Article</string>
    <string name="home_no_data">Empty</string>
</resources>