<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.apipas.spacex.presentation.home.fragment.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_mediaDialogFragment"
            app:destination="@id/mediaDialogFragment" />
        <action
            android:id="@+id/action_homeFragment_to_filterDialogFragment"
            app:destination="@id/filterDialogFragment" />
    </fragment>
    <dialog
        android:id="@+id/filterDialogFragment"
        android:name="com.apipas.spacex.presentation.filter.dialog.FilterDialogFragment"
        android:label="@string/filter_title"
        tools:layout="@layout/dialog_filter" />
    <dialog
        android:id="@+id/mediaDialogFragment"
        android:name="com.apipas.spacex.presentation.media.dialog.MediaDialogFragment"
        android:label="@string/media_title"
        tools:layout="@layout/dialog_media">
        <argument
            android:name="HomeLaunchItemModel"
            app:argType="com.apipas.spacex.presentation.home.model.HomeLaunchItemModel" />
    </dialog>


</navigation>